--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,10 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="light_black">#151414</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="off_white">#FFFFFFFF</color>
+    <color name="light_gray">#ECECEC</color>
+    <color name="gray">#D5D5D5</color>
+    <color name="dark_gray">#BABABA</color>
 </resources>
