--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,29 +1,46 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Skeleton" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Skeleton" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
+        <!--Effects on buttons text-->
+        <item name="colorOnPrimary">@color/white</item>
+        <!--Normal text-->
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+        <item name="android:statusBarColor" tools:targetApi="l">@color/white</item>
+        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
+        <item name="toolbarStyle">@style/ToolBarStyle</item>
+        <item name="android:windowBackground">@color/white</item>
     </style>
 
-    <style name="Theme.Skeleton.Starting" parent="Theme.SplashScreen">
-        // Set the splash screen background, animated icon, and animation duration.
-        <item name="windowSplashScreenBackground">@color/black</item>
-
-        // Use windowSplashScreenAnimatedIcon to add either a drawable or an
-        // animated drawable. One of these is required.
-        <!--<item name="windowSplashScreenAnimatedIcon">@drawable/ic_launcher_background</item>-->
-        <item name="windowSplashScreenAnimationDuration">200</item>  # Required for
-        # animated icons
-
-        <item name="postSplashScreenTheme">@style/Theme.Skeleton</item>  # Required.
+    <style name="ToolBarStyle.Base" parent="Widget.MaterialComponents.Toolbar.Primary">
+        <item name="popupTheme">@style/ThemeOverlay.MaterialComponents.Light</item>
+        <item name="theme">@style/ThemeOverlay.MaterialComponents.Dark.ActionBar</item>
     </style>
+
+    <style name="ToolBarStyle" parent="ToolBarStyle.Base">
+        <item name="titleTextAppearance">@style/TextAppearance.Toolbar.Title</item>
+        <item name="subtitleTextAppearance">@style/TextAppearance.Toolbar.SubTitle</item>
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="titleTextColor">@color/black</item>
+        <item name="subtitleTextColor">@color/light_black</item>
+
+    </style>
+
+    <style name="TextAppearance.Toolbar.Title" parent="@style/TextAppearance.Material3.ActionBar.Title">
+        <item name="fontFamily">sans-serif-medium</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="TextAppearance.Toolbar.SubTitle" parent="@style/TextAppearance.Material3.ActionBar.Title">
+        <item name="fontFamily">sans-serif-light</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
 </resources>
