--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,6 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <com.primelab.common.widgets.OtpView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:count="4"
+        android:fontFamily="sans-serif-condensed-medium"
+        android:id="@+id/otp_view"
+        app:item_background="@drawable/selector_otp"
+        app:error_message="Otp is wrong..."
+        app:layout_constraintTop_toTopOf="parent" />
     <Button
         android:id="@+id/click_me"
         android:layout_width="wrap_content"
