--- a/app/src/main/res/layout/fragment_otp.xml
+++ b/app/src/main/res/layout/fragment_otp.xml
@@ -6,6 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <com.primelab.common.widgets.OtpView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:count="4"
+        android:id="@+id/otp_view"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/verify"
         android:layout_width="wrap_content"
